--- a/main/package.json
+++ b/main/package.json
@@ -1,11 +1,10 @@
 {
   "name": "main",
-  "main": "target/main.js",
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "dev": "electron .",
-    "build": "rollup -c"
+    "build": "zx build.mjs",
+    "debug": "zx debug.mjs"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "26.0.1",
@@ -14,6 +13,7 @@
     "electron": "31.3.1",
     "electron-log": "5.1.7",
     "prettier": "3.3.3",
-    "rollup": "4.20.0"
+    "rollup": "4.20.0",
+    "zx": "8.1.4"
   }
 }
