--- a/app/.npmrc
+++ b/app/.npmrc
@@ -1,3 +1,4 @@
+virtual-store-dir-max-length=80
 registry=https://registry.npmmirror.com
 ELECTRON_MIRROR=https://npmmirror.com/mirrors/electron/
 ELECTRON_BUILDER_BINARIES_MIRROR=https://npmmirror.com/mirrors/electron-builder-binaries/
