--- a/app/package.json
+++ b/app/package.json
@@ -4,7 +4,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "electron-builder build"
   },
   "devDependencies": {
     "electron": "31.3.1",
