--- a/main/package.json
+++ b/main/package.json
@@ -7,13 +7,17 @@
     "debug": "zx debug.mjs"
   },
   "devDependencies": {
+    "@rollup/plugin-alias": "5.1.0",
     "@rollup/plugin-commonjs": "26.0.1",
     "@rollup/plugin-node-resolve": "15.2.3",
     "@rollup/plugin-terser": "0.4.4",
-    "electron": "31.3.1",
+    "@rollup/plugin-typescript": "11.1.6",
+    "electron": "31.4.0",
     "electron-log": "5.1.7",
     "prettier": "3.3.3",
     "rollup": "4.20.0",
+    "tslib": "2.6.3",
+    "typescript": "5.5.4",
     "zx": "8.1.4"
   }
 }
