--- a/renderer/package.json
+++ b/renderer/package.json
@@ -7,6 +7,7 @@
     "build": "vite build"
   },
   "devDependencies": {
+    "@unocss/preset-rem-to-px": "^0.62.2",
     "@vitejs/plugin-vue": "5.1.2",
     "@vueuse/core": "^11.0.0",
     "pinia": "^2.2.2",
