--- a/main/tsconfig.json
+++ b/main/tsconfig.json
@@ -20,6 +20,7 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": [
+    "lib/**/*.ts",
     "src/**/*.ts",
     "src/**/*.d.ts"
   ],
