--- a/renderer/package.json
+++ b/renderer/package.json
@@ -4,20 +4,22 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@unocss/preset-rem-to-px": "^0.62.2",
+    "@unocss/preset-rem-to-px": "0.62.2",
     "@vitejs/plugin-vue": "5.1.2",
-    "@vueuse/core": "^11.0.0",
-    "pinia": "^2.2.2",
+    "@vueuse/core": "11.0.0",
+    "draggabilly": "^3.0.0",
+    "pinia": "2.2.2",
     "prettier": "3.3.3",
     "sass": "1.77.8",
     "unocss": "0.62.2",
-    "unplugin-icons": "^0.19.2",
-    "unplugin-vue-components": "^0.27.4",
+    "unplugin-icons": "0.19.2",
+    "unplugin-vue-components": "0.27.4",
     "vite": "5.4.1",
     "vite-plugin-svg-icons": "2.0.1",
-    "vue": "^3.4.38"
+    "vue": "3.4.38"
   }
 }
