--- a/renderer/package.json
+++ b/renderer/package.json
@@ -4,20 +4,18 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vite build --emptyOutDir"
   },
   "devDependencies": {
     "@unocss/preset-rem-to-px": "0.62.3",
     "@vitejs/plugin-vue": "5.1.3",
     "@vueuse/core": "11.0.3",
     "pinia": "2.2.2",
-    "prettier": "3.3.3",
     "sass": "1.78.0",
     "unocss": "0.62.3",
     "unplugin-icons": "0.19.3",
     "unplugin-vue-components": "0.27.4",
-    "vite": "5.4.3",
+    "vite": "5.4.6",
     "vite-plugin-svg-icons": "2.0.1",
     "vue": "3.5.2"
   }
