--- a/app/package.json
+++ b/app/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "build": "electron-builder build"
+    "build": "electron-builder build",
+    "start:dev": "cross-env ELECTRON_MODE=dev electron ."
   },
   "devDependencies": {
-    "electron": "31.3.1",
+    "cross-env": "^7.0.3",
+    "electron": "31.4.0",
     "electron-builder": "24.13.3"
   }
 }
