--- a/main/tsconfig.json
+++ b/main/tsconfig.json
@@ -21,7 +21,7 @@
   "include": [
     "lib/**/*.ts",
     "src/**/*.ts",
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
   ],
   "exclude": ["node_modules"]
 }
