--- a/renderer/package.json
+++ b/renderer/package.json
@@ -3,16 +3,16 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build --emptyOutDir"
   },
   "devDependencies": {
-    "@unocss/preset-rem-to-px": "0.62.3",
+    "@unocss/preset-rem-to-px": "0.64.0",
     "@vitejs/plugin-vue": "5.1.3",
     "@vueuse/core": "11.0.3",
     "pinia": "2.2.2",
     "sass": "1.78.0",
-    "unocss": "0.62.3",
+    "unocss": "0.64.0",
     "unplugin-icons": "0.19.3",
     "unplugin-vue-components": "0.27.4",
     "vite": "5.4.6",
