--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "start:dev": "cross-env ELECTRON_MODE=dev electron ."
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "electron": "31.4.0",
     "electron-builder": "24.13.3"
   }
