--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "build": "electron-builder build",
-    "start:dev": "cross-env ELECTRON_MODE=dev electron ."
+    "start:electron": "cross-env ELECTRON_MODE=dev electron .",
+    "build:electron": "electron-builder build"
   },
   "devDependencies": {
     "cross-env": "7.0.3",
