--- a/main/package.json
+++ b/main/package.json
@@ -3,18 +3,12 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "build": "rollup -c"
+    "build:main": "rolldown -c"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "5.1.1",
-    "@rollup/plugin-commonjs": "28.0.1",
-    "@rollup/plugin-node-resolve": "15.3.0",
-    "@rollup/plugin-terser": "0.4.4",
-    "@rollup/plugin-typescript": "12.1.1",
     "electron": "31.4.0",
     "electron-log": "5.2.0",
-    "rollup": "4.24.4",
-    "tslib": "2.8.1",
+    "rolldown": "1.0.0-beta.33",
     "typescript": "5.6.3"
   }
 }
