--- a/preload/package.json
+++ b/preload/package.json
@@ -3,14 +3,10 @@
   "private": true,
   "version": "0.0.1",
   "scripts": {
-    "build": "rollup -c"
+    "build:preload": "rolldown -c"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "5.1.1",
-    "@rollup/plugin-commonjs": "28.0.1",
-    "@rollup/plugin-node-resolve": "15.3.0",
-    "@rollup/plugin-terser": "0.4.4",
     "electron": "31.4.0",
-    "rollup": "4.24.4"
+    "rolldown": "1.0.0-beta.33"
   }
 }
